Fix responsible tooltip styles

--- a/dev-workflow-ui/webContent/view/tasks.xhtml
+++ b/dev-workflow-ui/webContent/view/tasks.xhtml
@@ -50,18 +50,16 @@
             <p:column headerText="Responsible" width="160px" responsivePriority="3">
               <div class="flex">
                 <jc:user id="taskResponsible" user="#{task.firstResponsible}" rendered="#{task.hasResponsibles()}" />
-                <div>
-                  <h:panelGroup id="otherResponsibles" style="margin-left:3px;" rendered="#{task.responsibles.size() gt 1}" >
+                  <h:panelGroup id="otherResponsibles" styleClass="flex align-items-center" style="margin-left:3px;" rendered="#{task.responsibles.size() gt 1}" >
                     (<i class="mr-1 si si-multiple-neutral-1" /><h:outputText  value="#{task.responsibles.size()})" />
                   </h:panelGroup>
-                  <p:tooltip for="otherResponsibles"  position="top" autoHide="false">
+                  <p:tooltip for="otherResponsibles" position="top" autoHide="false">
                     <ui:repeat id="taskResponsibles" value="#{task.otherResponsibles}" var="responsible">
                       <div style="padding:5px;">
                         <jc:user id="taskResponsible" user="#{responsible}" />
                       </div>
                     </ui:repeat>
                   </p:tooltip>
-                </div>
               </div>
             </p:column>
 
