--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -7,131 +7,50 @@
     <f:viewParam name="originalUrl" value="#{frameIvyDevWfBean.originalUrl}"/>
   </f:metadata>
   <ui:composition template="../includes/template/template.xhtml">
+    <ui:define name="head">
+      <h:outputScript name="resources/js/frame.js" />
+      <h:outputScript name="resources/js/dom-select.js" rendered="#{permissionsBean.demoOrDevMode}" />
+      <h:outputScript name="resources/js/preview-ws.js" rendered="#{permissionsBean.demoOrDevMode}" />
+    </ui:define>
+
     <ui:define name="content">
       <div class="card mb-0">
         <h:form id="iFrameForm">
           <div class="card-header pb-0">
-            <div class="card-title flex align-items-center">
-              <i class="pr-3 si si-task-list-edit"></i>
-              <h6 class="m-0"><h:outputText id="frameTaskName" value="#{frameIvyDevWfBean.taskName}" /></h6>
-            </div>
-            <p:linkButton id="openStartFullscreenBtn" href="#{frameIvyDevWfBean.taskUrl}" icon="si si-expand-6"
-              styleClass="ml-auto ui-button-secondary rounded-button"/>
-            <p:tooltip for="openStartFullscreenBtn" value="Open current process start on a fullscreen page" position="left"/>
-            <p:commandButton value="Sidesteps" styleClass="ml-1" id="sidestepsBtn"
-              rendered="#{frameIvyDevWfBean.renderSidestepBtn()}" icon="si si-arrow-down-1" />
-            <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
-              model="#{frameIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
+            <h:panelGroup id="update" styleClass="flex flex-grow-1">
+              <div class="card-title flex align-items-center">
+                <i class="pr-3 si si-task-list-edit"></i>
+                <h6 class="m-0"><h:outputText id="frameTaskName" value="#{frameIvyDevWfBean.taskName}" /></h6>
+              </div>
+              <p:linkButton id="openStartFullscreenBtn" href="#{frameIvyDevWfBean.taskUrl}" icon="si si-expand-6"
+                styleClass="ml-auto ui-button-secondary rounded-button"/>
+              <p:tooltip for="openStartFullscreenBtn" value="Open current process start on a fullscreen page" position="left"/>
+              <p:commandButton value="Sidesteps" styleClass="ml-1" id="sidestepsBtn"
+                rendered="#{frameIvyDevWfBean.renderSidestepBtn()}" icon="si si-arrow-down-1" />
+              <p:menu id="sidestepMenu" overlay="true" trigger="sidestepsBtn" my="right top" at="right bottom"
+                model="#{frameIvyDevWfBean.sidestepsMenuModel}" styleClass="menu-no-icons" />
+            </h:panelGroup>
+            <h:panelGroup rendered="#{permissionsBean.demoOrDevMode}">
+              <p:commandButton id="previewElementPicker" widgetVar="previewElementPicker" disabled="true" type="button" onclick="selector.toggleSelectionMode()" styleClass="ml-1 rounded-button" icon="si si-pencil-write" />
+              <p:tooltip for="previewElementPicker" value="Open editor on picked widget" position="left"/>
+              <p:commandButton id="previewAutoReload" widgetVar="previewAutoReload" disabled="true" type="button" onclick="preview.toggleAutoRefresh()" styleClass="ml-1 rounded-button ui-button-outlined" icon="si si-button-refresh-arrows" />
+              <p:tooltip for="previewAutoReload" value="Disable auto refresh when changes are made to this dialog" position="left"/>
+            </h:panelGroup>
           </div>
-          <p:remoteCommand name="useTaskInIFrame" actionListener="#{frameIvyDevWfBean.useTaskInIFrame()}" update="@form" />
+          <p:remoteCommand name="useTaskInIFrame" actionListener="#{frameIvyDevWfBean.useTaskInIFrame()}" update="@form:update" />
         </h:form>
         <hr/>
         <iframe id="iFrame" src="#{frameIvyDevWfBean.taskUrl}" style="height: calc(100vh - 205px); width: 100%; border: 0; visibility: hidden;"></iframe>
       </div>
       <script>
-        function iframeURLChange(iframe, callback) {
-          var lastDispatched = null;
-
-          var dispatchChange = function() {
-            useTaskInIFrame([{
-              name: 'url',
-              value: iframe.contentWindow.location.pathname
-            }]);
-
-            var newHref = iframe.contentWindow.location.href;
-
-            if (newHref !== lastDispatched) {
-              callback(newHref, iframe);
-              lastDispatched = newHref;
-              updateHistory(newHref);
-            }
-          };
-
-          var updateHistory = function(newHref) {
-            var newHrefUrl = new URL(newHref);
-            var historyUrl = new URL(window.location);
-            historyUrl.searchParams.set('taskUrl', newHrefUrl.pathname + newHrefUrl.search);
-            history.replaceState({}, "", historyUrl);
-          }
-
-          var unloadHandler = function() {
-            // Timeout needed because the URL changes immediately after
-            // the `unload` event is dispatched.
-            setTimeout(dispatchChange, 0);
-            iframe.style.visibility = 'hidden';
-          };
-
-          function attachUnload() {
-            // Remove the unloadHandler in case it was already attached.
-            // Otherwise, there will be two handlers, which is unnecessary.
-            iframe.contentWindow.removeEventListener("unload", unloadHandler);
-            iframe.contentWindow.addEventListener("unload", unloadHandler);
-          }
-
-          iframe.addEventListener("load", function() {
-            try {
-              // Try to access loaded iframe content
-              iframe.contentWindow.content;
-              attachUnload();
-              // Just in case the change wasn't dispatched during the unload event...
-              dispatchChange();
-              iframe.style.visibility = 'visible';
-            } catch(e) {
-              // Open iframe content in current window if it could not be loaded
-              window.location = iframe.src;
-            }
-          });
-
-          attachUnload();
-        }
-
-        function checkAndReturnUrl(newURL, originPage) {
-          if (newURL.includes('task.xhtml')){
-            return newURL.substring(newURL.indexOf('task.xhtml'));
-          }
-          if (newURL.includes('?endedTaskId=')) {
-            return originPage;
-          }
-          if (newURL.endsWith('/faces/home.xhtml') || newURL.includes('DefaultApplicationHomePage.ivp') || newURL.endsWith('/app/home.xhtml')) {
-            return 'home.xhtml';
-          }
-          if (newURL.endsWith('/faces/tasks.xhtml') || newURL.includes('DefaultTaskListPage.ivp') || newURL.endsWith('/app/tasks.xhtml')) {
-            return 'tasks.xhtml';
-          }
-          if (newURL.endsWith('/faces/starts.xhtml') || newURL.includes('DefaultProcessStartListPage.ivp') || newURL.endsWith('/app/starts.xhtml')) {
-            return 'starts.xhtml';
-          }
-          if (newURL.endsWith('/faces/login.xhtml') || newURL.includes('DefaultLoginPage.ivp') || newURL.endsWith('/app/login.xhtml')) {
-            return 'login.xhtml';
-          }
-          if (newURL.endsWith('/faces/loginTable.xhtml')) {
-            return 'loginTable.xhtml';
-          }
-          if (newURL.endsWith('/faces/end.xhtml') || newURL.includes('DefaultEndPage.ivp') || newURL.endsWith('/app/end.xhtml')) {
-            return originPage;
-          }
-          return undefined;
-        }
-
-        iframeURLChange(document.getElementById("iFrame"), function(newURL, iframe) {
-          var originPage = new URLSearchParams(window.location.search).get('originalUrl');
-          if (iframe.contentWindow.location.pathname.match("/default/redirect.xhtml")) {
-            var redirectedPage = new URLSearchParams(iframe.contentWindow.location.search).get("redirectPage");
-            var newPage = checkAndReturnUrl(redirectedPage, originPage);
-            if (newPage) {
-              window.location = newPage;
-            }
-            else {
-              window.location = redirectedPage;
-            }
-          }
-          else {
-            var newPage = checkAndReturnUrl(newURL, originPage);
-            if (newPage) {
-              window.location = newPage;
-            }
-          }
-        });
+        let preview;
+      </script>
+      <h:outputScript rendered="#{permissionsBean.demoOrDevMode}">
+        preview = initPreview("#{frameBean.baseUrl}");
+        const selector = initDomSelector();
+      </h:outputScript>
+      <script>
+        iframeURLChange();
       </script>
     </ui:define>
   </ui:composition>
