XIVY-16477 Fix frameBean on R12

--- a/dev-workflow-ui/webContent/view/frame.xhtml
+++ b/dev-workflow-ui/webContent/view/frame.xhtml
@@ -46,7 +46,7 @@
         let preview;
       </script>
       <h:outputScript rendered="#{permissionsBean.demoOrDevMode}">
-        preview = initPreview("#{frameBean.baseUrl}");
+        preview = initPreview("#{frameIvyDevWfBean.baseUrl}");
         const selector = initDomSelector();
       </h:outputScript>
       <script>
